--- a/investigacion.tex
+++ b/investigacion.tex
@@ -50,14 +50,14 @@ Sanders \textsc{Pacheco A.} % Supervisor's Name
 
 \part{Conceptos Fundamentales}
 \index{Conceptos Fundamentales}
-En este capítulo vamos a desarrollar las bases necesarias para poder llegar a un pleno entendimiento de la investigación. Es una especie de marco teórico donde se abarcará la terminología básica de ciertos conceptos matemáticos y computacionales tratados en los siguientes capítulos. No debe entenderse como un glosario o un capítulo de definiciones sino que, este es el comienzo de la investigación en su etapa más básica.
+ En este capítulo vamos a desarrollar las bases necesarias para poder llegar a un pleno entendimiento de la investigación. Es una especie de marco teórico donde se abarcará la terminología básica de ciertos conceptos matemáticos y computacionales tratados en los siguientes capítulos. No debe entenderse como un glosario o un capítulo de definiciones sino que, este es el comienzo de la investigación en su etapa más básica.
 
 \section*{Conceptos matemáticos}
-Para poder comprender mejor los postulados de la Teoría Cuántica es necesario tener un conocimiento básico de álgebra lineal, específicamente sobre espacios vectoriales. Asumimos que el lector posee conocimientos sobre este tema, sin embargo vamos a hacer un pequeño repaso en conceptos fundamentales. 
+ Para poder comprender mejor los postulados de la Teoría Cuántica es necesario tener un conocimiento básico de álgebra lineal, específicamente sobre espacios vectoriales. Asumimos que el lector posee conocimientos sobre este tema, sin embargo vamos a hacer un pequeño repaso en conceptos fundamentales. 
 Shankar (1994) define los espacios vectoriales como:
 
 \begin{quote}
-\textit{Un espacio vectorial lineal $\mathbb{V}$ es una colección de objetos} $\vert1\rangle,\vert2\rangle,...,\vert V\rangle,...,\vert W\rangle,...,$ llamados vectores, para los cuales existe
+\textit{Un espacio vectorial lineal $\mathbb{V}$ es una colección de objetos} $\vert1\rangle,\vert2\rangle,...,\vert V\rangle,...,\vert W\rangle,...,$ \textit{llamados vectores, para los cuales existe}
 \\\\
 1. Una regla definida para realizar la suma de vectores, denotada $\vert V\rangle+\vert W\rangle$
 \\2. Una regla definida para la multiplicación por escalares \textit{a,b,...,} denotada $a\vert V\rangle$ con las siguientes características:
@@ -76,7 +76,7 @@ Shankar (1994) define los espacios vectoriales como:
 
 Esta notación de vectores $\vert V\rangle$ llamada \textit{notación Dirac} será muy utilizada más adelante cuando veamos los qubits, los cuales se rigen por las mismas reglas de espacios vectoriales mencionadas anteriormente. Además de estas reglas es necesario que consideremos los conceptos de \textit{campo}, \textit{combinaciones lineales} y \textit{bases ortonormales}.
 
-Es importante que definamos el \textit{campo} de un espacio vectorial. El campo se refiere al espacio donde están definidos los escalares que multiplican al espacio vectorial. Como los vectores no son número en sí, estos no se pueden multiplicar. Entonces, para poder multiplicar vectores necesitamos usar escalar inscritos a un campo. Por ejemplo, un \textit{espacio vectorial real} es un espacio definido por escalares reales. De igual manera tenemos los \textit{espacios vectoriales complejos}, entre otros.
+Es importante que definamos el \textit{campo} de un espacio vectorial. El campo se refiere al espacio donde están definidos los escalares que multiplican al espacio vectorial. Como los vectores no son números en sí, estos no se pueden multiplicar. Entonces, para poder multiplicar vectores necesitamos usar escalar inscritos a un campo. Por ejemplo, un \textit{espacio vectorial real} es un espacio definido por escalares reales. De igual manera tenemos los \textit{espacios vectoriales complejos}, entre otros.
 
 Debemos tener una noción básica de las combinaciones lineales en los espacios vectoriales. Como definición básica encontramos que Arce, Castillo y González (2003) explican que:
 \begin{quote}
@@ -113,17 +113,17 @@ Por otro lado, la norma de un vector, también conocida como magnitud, de una fo
 Ahora bien, aclarados esto términos podemos definir una \textit{base ortonormal} como: $"$Un conjunto de vectores base normales, los cuales son ortogonales dos a dos." (Shankar, 1994, p. 9).
 
 \section*{Introducción a la Mecánica Cuántica}
-En cuanto al concepto de Mecánica cuántica no discutiremos a profundidad los postulados que este propone, puesto que eso sería un enorme discusión. Sin embargo, vamos a comparar el primer postulado de la mecánica cuánticacon el primer postulado de la mecánica clásica. El primero afirma que: ''El estado de una partícula en algún momento dado está especificado por las variables \textit{x(t)} y \textit{p(t)}, i.e., como un punto en un espacio de dos dimensiones.'' (Shankar, 1994, p. 115). Mientras que el segundo dice que: ''El estado de una partícula está representado por el vector $\vert \psi(t)\rangle$ en un espacio Hilbert.'' (Shankar, 1994, p.115)
+En cuanto al concepto de mecánica cuántica no discutiremos a profundidad los postulados que este propone, puesto que eso sería un enorme discusión. Sin embargo, vamos a comparar el primer postulado de la mecánica cuántica con el primer postulado de la mecánica clásica. El primero afirma que: ''El estado de una partícula en algún momento dado está especificado por las variables \textit{x(t)} y \textit{p(t)}, i.e., como un punto en un espacio de dos dimensiones.'' (Shankar, 1994, p. 115). Mientras que el segundo dice que: ''El estado de una partícula está representado por el vector $\vert \psi(t)\rangle$ en un espacio Hilbert.'' (Shankar, 1994, p.115)
 
-Con este postulado, podríamos decir que tenemos la base para comprender el concepto de los qubits. Pero en general, qué es la mecánica cuántica. Nielsen y Chuang (2010) la definen como: ''(...)un marco matemático o un conjunto de reglas para la construcción de teorías de la física.'' (p. 2). Nos parece contextualmente comprensible la analogía que plantean estos autores. En esta, comparan la relación que tiene la mecánica cuántica y las teorías que derivan de ella con un sistema operativo y sus aplicaciones de software (p. 2). Como vemos entre ambas relaciones hay una conexión de base, donde el primer concepto sirve de fundamento para que se creen los elementos con los cuales se relacionan.
+Con este postulado, podríamos decir que tenemos la base para comprender el concepto de los qubits. Pero en general, ¿qué es la mecánica cuántica? Nielsen y Chuang (2010) la definen como: ''(...)un marco matemático o un conjunto de reglas para la construcción de teorías de la física.'' (p. 2). Nos parece contextualmente comprensible la analogía que plantean estos autores. En esta, comparan la relación que tiene la mecánica cuántica y las teorías que derivan de ella con un sistema operativo y sus aplicaciones de software (p. 2). Como vemos entre ambas relaciones hay una conexión de base, donde el primer concepto sirve de fundamento para que se creen los elementos con los cuales se relacionan.
 
-Incluso yendo más allá de una simple definición y contexto histórico Nielsen y Chuang (2010) se atreven, luego de hacer una línea de tiempo en el desarrollo de la mecánica cuántica a proponerla como un reto para la computación. Ellos exponen los inicios de esta nueva forma de ver la física, que se remontan a las años 20 hasta los hallazgos más destacables que datan desde los años 70 hasta la actualidad. Luego, hace una reflexión acerca de que los intentos por desarrollar nuevos hallazgos científicados, aunque sea por mera corazonada, han dado nacimiento a importantes descubrimientos en la historia de la humanidad. Es aquí donde ellos recalcan que la computación e informática cuántica caben a la perfección en este esquema de resolver retos propuestos por nuevos esquemas de conocimiento. (pp. 2-3)
+Incluso yendo más allá de una simple definición y contexto histórico Nielsen y Chuang (2010) se atreven, luego de hacer una línea de tiempo en el desarrollo de la mecánica cuántica, a proponerla como un reto para la computación. Ellos exponen los inicios de esta nueva forma de ver la física, que se remontan a las años 20 hasta los hallazgos más destacables que datan desde los años 70 hasta la actualidad. Luego, hace una reflexión acerca de que los intentos por desarrollar nuevos hallazgos científicados, aunque sea por mera corazonada, han dado nacimiento a importantes descubrimientos en la historia de la humanidad. Es aquí donde ellos recalcan que la computación e informática cuántica caben a la perfección en este esquema de resolver retos propuestos por nuevos esquemas de conocimiento. (pp. 2-3)
 
 Entonces, el desarrollo de la mecánica cuántica en las ciencias de la computación puede representar un inmenso avance en el desarrollo de soluciones para los problemas propios de este ciencia. 
 
-Para poner un ejemplo, vamos a retroceder un momento en historia y remontemos sobre los inicios de la computación. Si nos colocamos en los antecedentes de las primeras computadoras electrónicas tenemos el gran aporte de Alan Turing. Turing (1936) propone el concepto de una máquina que es capaz de interpretar un número finito de instrucciones llamadas "m-configurations". Esta máquina será alimentada por una cinta seccionada que va a contener el conjunto de instrucciones que se desean que la máquina interprete y como resultado imprimirá en otra cinta los resultados de las instrucciones que la máquina va a interpretar. (p. 232). Solo para recalcar la importancia del trabajo de Turing, Herken (1998) afirma que: ''Es bastante sorprendente ver cómo, en tan sólo diez años después de ''Computable Numbers'', había traducido sus ideas en una poderosa visión profética del potencial de la tecnología informática'' (p. 8) 
+Para poner un ejemplo, vamos a retroceder un momento en la historia y remontemos sobre los inicios de la computación. Si nos colocamos en los antecedentes de las primeras computadoras electrónicas tenemos el gran aporte de Alan Turing. Turing (1936) propone el concepto de una máquina que es capaz de interpretar un número finito de instrucciones llamadas "m-configurations". Esta máquina será alimentada por una cinta seccionada que va a contener el conjunto de instrucciones que se desean que la máquina interprete y como resultado imprimirá en otra cinta los resultados de las instrucciones que la máquina va a interpretar. (p. 232). Solo para recalcar la importancia del trabajo de Turing, Herken (1998) afirma que: ''Es bastante sorprendente ver cómo, en tan sólo diez años después de ''Computable Numbers'', había traducido sus ideas en una poderosa visión profética del potencial de la tecnología informática'' (p. 8) 
 
-Pero volviendo a la línea histórica, tenemos el trabajo de Turing que mencionamos que data de 1936, luego tenemos a John Von Neumann. Los aportes que Von Neumann hizo al conocimiento científico en general son muchos y en diversas áreas (incluyendo en la mecánica cuántica) pero ahora nos limitaremos a su trabajo \textit{First Draft of a Report on the EDVAC}. Incluso siendo una borrador incompleto, muestra la arquitectura de la computadora EDVAC. Esta se convirtió en la arquitectura más usada en la creación de nuevas computadoras y como base se ha mantenido hasta la actualidad. Con la invención del transistor en 1947 el desarrollo de nuevo hardware se vió impulsado y esta arquitectura obtuvo mucha más fuerza.
+Volviendo a la línea histórica, tenemos el trabajo de Turing que mencionamos que data de 1936, seguido por el trabajo de John Von Neumann. Los aportes que Von Neumann hizo al conocimiento científico en general son muchos y en diversas áreas (incluyendo en la mecánica cuántica) pero ahora nos limitaremos a su trabajo \textit{First Draft of a Report on the EDVAC}. Incluso siendo una borrador incompleto, muestra la arquitectura de la computadora EDVAC. Esta se convirtió en la arquitectura más usada en la creación de nuevas computadoras y como base se ha mantenido hasta la actualidad. Con la invención del transistor en 1947 el desarrollo de nuevo hardware se vió impulsado y esta arquitectura obtuvo mucha más fuerza.
 
 Gracias a los transistores, se comenzó el desarrollo de circuitos integrados. El experto en fisicoquímica Gordon Moore (1965) habla sobre las ventajas y los posibles usos de los circuitos integrados. Inclusive afirma que: 
 \begin{quote}
@@ -131,7 +131,7 @@ el futuro de la electrónica integrada es el futuro de la electrónica misma.(..
 
 La electrónica integrada hará las técnicas electrónicas más accesibles al resto de la sociedad, realizando muchas funciones que en el presente se hacen inadecuadamente o no se hacen del todo. La principal ventaja serán bajos costos y diseños grandemente simplificados---recompensa de un suministro de paquetes funcionales de bajo costo. (pp. 1-2)
 \end{quote}
-Sin embargo, él propone en este artículo una cierta preocupación. Moore (1965) espera que para la siguiente década se duplique el número de componentes en un circuito integrado. Esta aproximación resulto ser casi apegada a la realidad del futuro tanto que se le dió el nombre de \textit{Ley de Moore}.
+Sin embargo, él propone en este artículo una cierta preocupación. Moore (1965) esperaba que para la siguiente década se duplicara el número de componentes en un circuito integrado. Esta aproximación resulto ser casi apegada a la realidad del futuro tanto que se le dió el nombre de \textit{Ley de Moore}.
 
 Con esto ya expuesto podemos tener una aproximación del futuro en la construcción de computadores a nivel de hardware. El crecimiento acelerado de componentes va a llegar a un punto donde va a ser necesario buscar una solución. Es aquí donde Nielsen y Chuang (2010) proponen como solución buscar nuevos paradigmas computacionales, y uno de estos puede ser fruto de la teoría de la computación cuántica. Los autores hablan sobre computadoras que procesen información usando métodos de mecánica cuántica a velocidad increíblemente rápidas en comparación con los métodos actuales con mecánica clásica. (pp. 4-5) Por tanto, decidimos investigar acerca de estos métodos de computación mediante mecánica cuántica. Como primera instancia, expondremos las unidades básicas y características fundamentales de la computación cuántica.
 \clearpage
@@ -154,7 +154,7 @@ La habilidad de un qubit de estar en un estado superpuesto va en contra del ente
 
 Los qubits son reales, y varios sistemas físicos se pueden utilizar para hacer qubits. Por ejemplo, se pueden realizar con las dos distintas polarizaciones de un fotón, con el alineamiento del espín nuclear en un campo magnético uniforme, como dos estados de un electrón orbitando un átomo. (Nielsen, 2010, p.14) 
 
-La representación geométrica de un qubit se puede apreciar en la figura 1
+La representación geométrica de un qubit se puede apreciar en la Figura 1.
 
 \begin{figure}
 \centering
@@ -165,7 +165,7 @@ La representación geométrica de un qubit se puede apreciar en la figura 1
 Los cambios que le suceden a un estado cuántico se pueden describir usando la computación cuántica. De la misma manera que una computadora clásica está construida con base en circuitos lógicos, una computadora cuántica se basa en circuitos cuánticos con compuertas cuánticas elementales.
  
 \section*{Compuertas con un qubit}
-Consideremos la operación lógica NOT que modifica un bit clásico. Es una operación que no pierde información y es reversible con otro NOT. (Feynman, )
+ Consideremos la operación lógica NOT que modifica un bit clásico. Es una operación que no pierde información y es reversible con otro NOT. (Feynman, 1985, p.12)
 Su tabla de verdad está descrita en el Cuadro 1.
 
 Cuadro 1: Tabla de verdad de NOT
@@ -185,8 +185,8 @@ El NOT funciona de una manera lineal porque toma el estado
   $\alpha \vert 1\rangle + \beta \vert 0\rangle$. 
 Las compuertas cuánticas NOT se pueden describir en matrices de 2x2 (surge directamente de la linealidad). Supongamos que la X representa una compuerta NOT. 
 $X \equiv \begin{bmatrix}
-		\ 0 & 1
-		\ 1 & 0
+		\ 0 & 1 \\
+		\ 1 & 0 \\
 	      \end{bmatrix}$
 Si escribimos el estado cuántico $\alpha \vert 0\rangle + \beta \vert 1\rangle$ en notación vectorial
 $
@@ -197,12 +197,12 @@ $
 $
 la salida del NOT cuántico es 
 $X \begin{bmatrix} 
-     \ \alpha
-     \ \beta
+     \ \alpha \\
+     \ \beta  \\
  \end{bmatrix}
  = \begin{bmatrix}
- \ \beta
- \ \alpha
+ \ \beta  \\
+ \ \alpha \\
  \end{bmatrix}$.
  
 La acción de un NOT es tomar el estado 0 y reemplazarlo por el estado correspondiente a la primera columna de la matriz X. De igual manera el estado 1 es reemplazado por el estado correspondiente a la segunda columna de la matriz X. 
@@ -222,8 +222,8 @@ $H =  \frac{1}{\sqrt{2}}  \begin{bmatrix}
            \end{bmatrix}$.
 
 \section*{Compuertas con múltiples qubits}
-CONTROLLED NOT
-En un CONTROLLED NOT entran dos datos, \textit{a} y \textit{b}, y salen dos datos \textit{a'} y \textit{b'}. \textit{a} es la línea de control: si se activa y \textit{a}=1, entonces \textit{b'} es la negación de \textit{b}. Si \textit{a}=0, entonces \textit{b}=\textit{b'}. La acción de un CONTROLLED NOT es revertida al aplicar un CNOT de nuevo. 
+ CONTROLLED NOT
+ En un CONTROLLED NOT entran dos datos, \textit{a} y \textit{b}, y salen dos datos \textit{a'} y \textit{b'}. \textit{a} es la línea de control: si se activa y \textit{a}=1, entonces \textit{b'} es la negación de \textit{b}. Si \textit{a}=0, entonces \textit{b}=\textit{b'}. La acción de un CONTROLLED NOT es revertida al aplicar un CNOT de nuevo. 
 La salida \textit{b'} es en realidad una función simétrica de \textit{a} y \textit{b} conocida como XOR. Es a la vez la suma módulo dos de \textit{a} y \textit{b}. Se puede utilizar para comparar los valores de \textit{a} y \textit{b} y dar como resultado 1 cuando son diferentes. (Feynman, 1985, p.12)
 
 CONTROLLED CONTROLLED NOT
@@ -232,7 +232,7 @@ En este caso hay dos líneas de control a y b que modifican a la tercera línea 
 El CNOT y las compuertas de un qubit son los prototipos necesarios para hacer cualquier otro tipo de compuerta (son el NAND de los bits clásicos). (Nielsen, 2010, p.22)
 
 \section*{Circuitos cuánticos}
-¿Podemos simular circuitos con compuertas clásicas usando circuitos cuánticos? La respuesta es sí. Sin embargo, la mayoría de las compuertas cuánticas son reversibles, mientras las compuertas clásicas son irreversibles. (Nielsen, 2010, p.29)
+ ¿Podemos simular circuitos con compuertas clásicas usando circuitos cuánticos? La respuesta es sí. Sin embargo, la mayoría de las compuertas cuánticas son reversibles, mientras las compuertas clásicas son irreversibles. (Nielsen, 2010, p.29)
 Cualquier circuito clásico puede ser reemplazado por uno equivalente construido únicamente con elementos reversibles, utilizando la \textit{compuerta Toffoli}. La compuerta Toffoli tiene tres bits de entrada y tres de salida. Dos de esos bits son de control y no los afecta la acción de la compuerta en sí. El tercero es un bit que es "flippeado" , si las dos líneas de control están activadas. Aplicar dos veces la compuerta Toffoli a un bit hace que se revierta al estado original porque su inversa es sí misma. (Nielsen, 2010, p.29)
 La compuerta Toffoli se puede utilizar para simular compuertas NAND. (Nielsen, 2010, p.29)
 
@@ -250,7 +250,7 @@ El entrelazamiento consiste en un sistema formado por dos o más subsistemas. En
 \section*{Teletrasportación cuántica}
 A veces, la ciencia ficción deja de ser ficción para convertirse en tecnología del presente. Muchos recordarán la serie \textit{Star Trek} y como el Capitán Kirk era teletransportado a la nave \textit{Enterprise} com su famosa frase: \textit{''Beam me up Scotty''}. Este tipo de ideas, que un principio existen solo en la ficción pasan a ser investigadas en tangenciales campos científicos. En el apartado anterior desarrollamos el concepto de entrelazamiento cuántico por un motivo. Gracias a esta propiedad de las partículas cuánticas se ha logrado la \textit{teletransportación cuántica}. 
 
-Los inicios de la teletransportación se remontan a los años 80's cuando William Wootters y W. Zurek presentan el \textit{Teorema del no clonado}, el cual muestra que una partícula cuántica no puede ser clonada. El teorema dice que, si tenemos una partícula, es imposible copiar su estado en otra, mientras la partícula original permanezca igual.  Por tanto, no se puede tener una especie de dispositivo que copie las propiedades de una partícula en otra. La solución dada a este problema por los físicos fue la de imprimir el estado de una partícula en otro y hacerla desaparecer en la original. Este proceso es el que se conoce como \textit{teletransportación}  (Aczel, 2001, p. 242)
+Los inicios de la teletransportación se remontan a los años 80 cuando William Wootters y W. Zurek presentan el \textit{Teorema del no clonado}, el cual muestra que una partícula cuántica no puede ser clonada. El teorema dice que, si tenemos una partícula, es imposible copiar su estado en otra, mientras la partícula original permanezca igual.  Por tanto, no se puede tener una especie de dispositivo que copie las propiedades de una partícula en otra. La solución dada a este problema por los físicos fue la de imprimir el estado de una partícula en otro y hacerla desaparecer en la original. Este proceso es el que se conoce como \textit{teletransportación}  (Aczel, 2001, p. 242)
 
 En 1997, un grupo de físicos lograron con éxito un experimento donde pudieron teletransportar cuánticamente una partícula. Su experimento fue publicado en un artículo de la prestigiosa revista \textit{Nature}. Este dice:
 \begin{quote}
